# learnopengl

./: .gitignore  CMakeLists.txt  run.sh
shaders/: fragment.fs  vertex.vs
src/: main  main.c  shader.c  shader.h
vender/glfw-3.4/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
vender/glfw-3.4/docs/: Makefile  cmake_install.cmake
vender/glfw-3.4/src/: Makefile  cmake_install.cmake
zig/: build.zig  build.zig.zon
zig/src/: main.zig
